--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,16 @@
-certifi==2018.4.16
+asn1crypto==0.24.0
+cffi==1.11.5
 click==6.7
-Flask==1.0.2
+cryptography==2.3.1
+Flask==0.12.2
 Flask-SQLAlchemy==2.3.2
+gunicorn==19.9.0
+idna==2.7
 itsdangerous==0.24
 Jinja2==2.10
 MarkupSafe==1.0
-numpy==1.14.5
-pandas==0.23.3
-python-dateutil==2.7.3
-pytz==2018.5
+pycparser==2.18
+PyMySQL==0.9.2
 six==1.11.0
-SQLAlchemy==1.2.10
+SQLAlchemy==1.2.8
 Werkzeug==0.14.1
-gunicorn==19.9.0
